# Makefile : Builds myserver, control, CGI-LIB, math_sum, counter, and post
#

#source control CGI-LIB binaries/web/cgi-src/math_sum binaries/web/cgi-src/post binaries/web/cgi-src/counter
SUBDIRS = source control CGI-LIB binaries/web/cgi-src/math_sum binaries/web/cgi-src/post binaries/web/cgi-src/counter
