# GNU MyServer
#
# Copyright (C) 2002-2010 Free Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
## Makefile for gnulib/lib				-*-Makefile-*-

# Copyright (C) 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003,
# 2004, 2005, 2006, 2007, 2009, 2010 Free Software Foundation, Inc.

## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.

GNULIB_SOCKET=1
GNULIB_CONNECT=1
GNULIB_ACCEPT=1
GNULIB_BIND=1
GNULIB_GETPEERNAME=1
GNULIB_GETSOCKNAME=1
GNULIB_GETSOCKOPT=1
GNULIB_LISTEN=1
GNULIB_RECV=1
GNULIB_SEND=1
GNULIB_SELECT=1
GNULIB_RECVFROM=1
GNULIB_SENDTO=1
GNULIB_SETSOCKOPT=1
GNULIB_SHUTDOWN=1
GNULIB_ACCEPT4=1

include gnulib.mk
